fixing login box which is too short for german

--- a/themes/pbpoker/pbpoker.css
+++ b/themes/pbpoker/pbpoker.css
@@ -345,7 +345,7 @@ div#user_login
 	text-decoration: none;
 	margin-top: 12px;
 	white-space: nowrap;
-	width: 305px;
+	width: 400px;
 }
 
 div#user_login .user_login_row
@@ -755,6 +755,7 @@ div#buddylist .header label
 	background: transparent url(images/bg_titlebar.gif) repeat-x top left;
 	height: 20px;
 	padding-top: 3px;
+	font-size: 12px;
 }
 
 .block_title_text
